--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: fastapi
     build: ./docker/fastapi
     volumes:
-      - ./app:/app
+      - ./fastapi:/app
     ports:
       - "80:80"
     command: uvicorn main:app --reload --host 0.0.0.0 --port 80
