--- a/docker/fastapi/Dockerfile
+++ b/docker/fastapi/Dockerfile
@@ -2,4 +2,4 @@ FROM python:3.10-slim
 
 WORKDIR /app
 
-RUN pip install fastapi uvicorn pytest loguru
+RUN pip install fastapi uvicorn pytest requests loguru
